update test file

--- a/test/hello.html
+++ b/test/hello.html
@@ -175,7 +175,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p><span class="math inline">\(w_0 + n_0 = 2\)</span></p>
 <p><span class="math inline">\(Cr_2O_7^2\)</span></p>
 <p><span class="math inline">\(s^{N_2}_+ [n]\)</span></p>
-<p><span class="math inline">\(\frac{1}{2\xi \sqrt{1+\xi^2}}\)</span></p>
+<p><span class="math inline">\(\frac{1}{2\beta \sqrt{1+\beta^2}}\)</span></p>
 <p><span class="math inline">\(1\: + 2\)</span></p>
 </section>
 
